# ChangeLog for media-video/vlc
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.32 2003/08/16 08:16:42 g2boojum Exp $

  16 Aug 2003; Nick Hadaway <raker@gentoo.org> vlc-0.6.2.ebuild,
  files/glide.patch:
  Glide works now possibly.  See bug #24119.  Also added the touch stuff
  from the videolan cvs ebuild.

  15 Aug 2003; Nick Hadaway <raker@gentoo.org> vlc-0.6.2.ebuild:
  Stripping -fomit-frame-pointer if gcc-major-version -eq 2.  See bug
  #24678.

*vlc-0.6.2 (13 Aug 2003)

  13 Aug 2003; Nick Hadaway <raker@gentoo.org> vlc-0.6.2.ebuild:
  Version bump.  Removed 0.6.1 related workarounds.  Added support
  for the altivec USE variable.  Up to 34 USE variables now. :)

*vlc-0.6.1 (01 Aug 2003)

  01 Aug 2003; Nick Hadaway <raker@gentoo.org> vlc-0.6.1.ebuild,
  files/buildorder.patch:
  The "elusive math equation" release.
  Version bump.  Re-organized the ebuild to coincide with the listing
  of configure options outputted by ./configure --help.  Added support
  for USE variables faad, xosd, and matroska.  Added a patch based on
  upstream cvs which allows the mozilla plugin to compile properly.
  I have updated the dependancies to the new ebuilds of libdvdcss-1.2.8
  and libdvbpsi-0.1.3 as upstream authors suggest these versions.
  We are now weighing in at 33 use variables folks. :)  Presently, 
  perhaps the most prolific package in Portage. :)

  21 Jul 2003; Nick Hadaway <raker@gentoo.org> vlc-0.6.0-r1.ebuild:
  Removed the matrox use variable and forced disable-mga as the
  module is known not to work, slower than other rendering, and will
  not be updated upstream anymore.

  20 Jul 2003; Nick Hadaway <raker@gentoo.org> vlc-0.6.0-r1.ebuild:
  Added support for the debug USE variable.  Added the matroska
  local USE variable.

  19 Jul 2003; Nick Hadaway <raker@gentoo.org> vlc-0.6.0-r1.ebuild:
  Added the dvb USE variable.  Added a comment re: truetype for 0.6.1