@@ -3,10 +3,10 @@ MD5 f3a6a89a4c30d44bcce0f76ac71b0256 vlc-0.4.4.ebuild 3851
 MD5 185be9f9dcdfa12776bd5295a1e23570 vlc-0.5.2.ebuild 3876
 MD5 6c597e964cfd0c0e082ffbcb64ef7b2d vlc-0.6.0.ebuild 5100
 MD5 f38f55232741d4faeb8946546ad42a39 vlc-0.5.2-r1.ebuild 4481
-MD5 bceaac43ffe8949c547c705155bd45e9 vlc-0.6.2.ebuild 6337
+MD5 5a86b0a303b6befac66c1a699c518d5c vlc-0.6.2.ebuild 6322
 MD5 ecee6eaca98dfa911be0126c0c9fe3ec vlc-0.4.5.ebuild 3850
 MD5 9d740a9c8110a843c5f12f6685e17d4f vlc-0.6.1.ebuild 6167
-MD5 9e76129d67016d5b5964e7a635786ddc ChangeLog 6878
+MD5 553ee86cdd6b590c7b3b5b46033f2acf ChangeLog 7012
 MD5 6d7dd1d8477d38f85cc4d4ed59489b4f files/digest-vlc-0.5.2-r1 63
 MD5 5f5a12e2d124384eb5d129e60879202d files/digest-vlc-0.6.0-r1 63
 MD5 5cf5ab60ab2619db091501d7acc50284 files/mozplugin.patch 5995
