@@ -1,6 +1,9 @@
 # ChangeLog for media-video/vlc
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.32 2003/08/16 08:16:42 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.33 2003/08/18 01:05:08 g2boojum Exp $
+
+  17 Aug 2003; Nick Hadaway <raker@gentoo.org> vlc-0.6.2.ebuild:
+  Made minor change as suggested by brandy@gentoo.org on bug #24119
 
   16 Aug 2003; Nick Hadaway <raker@gentoo.org> vlc-0.6.2.ebuild,
   files/glide.patch:
